[project]
name = "blood-kingdoms-ruin"
version = "0.1.0"
description = ""
authors = [
    {name = "karat",email = "karateev.92@gmail.com "}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
